kubernetes/apache-kafka-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: apache-kafka
spec:
  selector:
    matchLabels:
      app: apache-kafka
  serviceName: apache-kafka
  replicas: 1
  template:
    metadata:
      labels:
        app: apache-kafka
    spec:
      containers:
        - name: apache-kafka
          image: confluentinc/cp-kafka:latest
          ports:
            - containerPort: 9092
              name: http
          volumeMounts:
            - name: data
              mountPath: /var/lib/kafka/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 100Mi
